@@ -27,6 +27,7 @@ Enhancements
  * New DHCP fingerprint for Cisco/Linksys, Aruba, 3Com switch, HTC Android and
    Konica Minolta MFP's
  * Warning avoidance
+ * New FreeRADIUS watchdog script in addons
 
 Bug fixes
  * Re-introduced MAC Authentication and 802.1X support in Cisco 3560, 3750
